--- a/client/views/partials/admin/services/addNewAccount.html
+++ b/client/views/partials/admin/services/addNewAccount.html
@@ -159,6 +159,15 @@
                                         </label>
                                     </div>
                                 </li>
+                                <li>
+                                    <div class="checkbox">
+                                        <label>
+                                            <input type="checkbox" value="" ng-model="accountDetails.expenseSheetEnabled">
+                                            <span class="cr"><i class="cr-icon fa fa-check"></i></span>
+                                            Expense Sheet
+                                        </label>
+                                    </div>
+                                </li>
                             </ul>
                         </div>
                         <div class="form-group">
