--- a/client/views/partials/tripSheets/tripSheet.html
+++ b/client/views/partials/tripSheets/tripSheet.html
@@ -84,7 +84,7 @@
             <th>Trip Id</th>
             <th>Party Name</th>
         </tr>
-        <tr ng-repeat="sheet in tripSheets | filter:{registrationNo: tripSheets.registrationNo.registrationNo}"
+        <tr ng-repeat="sheet in tripSheets track by $index"
             style="text-align: center;">
             <td class="col-sm-1">{{$index+1}}</td>
             <td class="col-sm-1">{{sheet.registrationNo | uppercase}}</td>
@@ -135,7 +135,7 @@
                 </div>
             </td>
             <td>
-                <input type="text" class="form-control" ng-model="sheet.tripId" style="width: 40px;">
+                <input type="text" class="form-control" ng-model="sheet.tripId" style="width: 40px;" ng-change="getValues(sheet.tripId,$index)">
             </td>
             <td class="col-sm-2">
                 <ui-select ng-model="sheet.partyId" theme="select2" title="Choose a Party"
