--- a/client/views/partials/expenses/expensesSheet.html
+++ b/client/views/partials/expenses/expensesSheet.html
@@ -1,11 +1,11 @@
 <div class="mainRight col-xs-12" ng-controller="expensesSheetController">
     <div class="row">
         <div class="col-sm-3">
-            <h3>Expenses Sheet{{truck.registrationNo}}</h3>
+            <h3>Expenses Sheet</h3>
         </div>
         <div class="col-sm-9">
             <div class="col-sm-3">
-                <ui-select ng-model="truck.registrationNo" theme="select2"
+                <ui-select ng-model="expensesSheetsDetails.registrationNo" theme="select2"
                            title="Choose a person" append-to-body="true">
                     <ui-select-match placeholder=" Select a Truck" class="form-control">
                         {{$select.selected.registrationNo || registrationNo}}
@@ -29,16 +29,16 @@
                     </li>
                     <li class="col-sm-1 pall-zero">
                         <button type="submit"
-                                ng-click="validateFilters(expensesSheet.registrationNo._id, fromDate, toDate );"
+                                ng-click="validateFilters(expensesSheetsDetails.registrationNo._id, fromDate, toDate );"
                                 class="btn go" data-toggle="modal" data-target="#myModal">
                             <i class="fa fa-search sear" aria-hidden="true"></i>
                         </button>
                     </li>
-                    <li class="col-sm-1 pall-zero">
-                        <button type="button" ng-click="printArea( )" class="btn mailImage">
-                            <i class="fa fa-print fa-2x" aria-hidden="true"></i>
-                        </button>
-                    </li>
+                    <!--<li class="col-sm-1 pall-zero">-->
+                    <!--<button type="button" ng-click="printArea( )" class="btn mailImage">-->
+                    <!--<i class="fa fa-print fa-2x" aria-hidden="true"></i>-->
+                    <!--</button>-->
+                    <!--</li>-->
                 </ul>
             </div>
         </div>
@@ -53,7 +53,7 @@
             <p class="input-group">
                 <input type="text" class="form-control" uib-datepicker-popup ng-model="dt" is-open="popup2.opened"
                        datepicker-options="dateOptions" ng-required="true" close-text="Close"
-                       style="height: 34px !important;" ng-change="getAllTripssheets(dt)"/>
+                       style="height: 34px !important;" ng-change="getAllExpensesSheets(dt)"/>
                 <span class="input-group-btn">
             <button type="button" class="btn btn-default" ng-click="open2()"><i
                     class="glyphicon glyphicon-calendar"></i></button>
@@ -84,7 +84,7 @@
             <th>Unloading Date</th>
             <th>Remarks</th>
         </tr>
-        <tr style="text-align: center;" ng-repeat="expensesSheet in expensesSheetsDetails | filter:{vehicleNo: expensesSheet.registrationNo.registrationNo}">
+        <tr style="text-align: center;" ng-repeat="expensesSheet in expensesSheetsDetails">
             <td>{{$index+1}}</td>
             <td class="col-sm-1">{{expensesSheet.vehicleNo}}</td>
             <td class="col-sm-1">{{expensesSheet.from}}</td>
@@ -99,6 +99,8 @@
             </td>
             <td >
                 <input type="text" class="form-control" ng-model="expensesSheet.cash">
+                <input type="checkbox" ng-model="expensesSheet.throughOnline" value=""/>
+                Paid through Online
             </td>
             <td>
                 <input type="text" class="form-control" ng-model="expensesSheet.lrNo">
@@ -111,7 +113,7 @@
             </td>
         </tr>
         <tr><td colspan="7">Total</td>
-        <td>{{dieselTotal}}</td>
+            <td>{{dieselTotal}}</td>
             <td>{{cashTotal}}</td>
             <td></td>
             <td></td>
@@ -120,9 +122,9 @@
     </table>
     <div class="center-block" style="width: 60%;">
         <!--<div class="alert alert-danger" role="alert" ng-show="errors.length">-->
-            <!--<ul>-->
-                <!--<li ng-repeat="error in errors">{{error}}</li>-->
-            <!--</ul>-->
+        <!--<ul>-->
+        <!--<li ng-repeat="error in errors">{{error}}</li>-->
+        <!--</ul>-->
         <!--</div>-->
     </div>
 
@@ -142,7 +144,7 @@
                     <div class="row">
                         <!--<button type="button" class="close" data-dismiss="modal">&times;</button>-->
 
-                        <h4 class="modal-title col-sm-5"><b>Trip Sheet Report</b></h4>
+                        <h4 class="modal-title col-sm-5"><b>Expenses Sheet Report</b></h4>
                         <!--<div class="pall-zero col-sm-5">-->
                         <!--<b> <a href="#"-->
                         <!--ng-click="downloadTripSheetReport(tripSheets.registrationNo._id, fromDate, toDate );">Download-->
@@ -159,23 +161,23 @@
                         <tr>
                             <th>S No</th>
                             <th>Registration No</th>
-                            <th>loading Point</th>
-                            <th>Unloading Point</th>
+                            <th>From</th>
+                            <th>To</th>
                             <th>Party Name</th>
+                            <th>Driver Name</th>
+                            <th>Diesel Slip</th>
+                            <th>Diesel Amount</th>
                         </tr>
-                        <tr ng-repeat="report in tripSheetReports"
+                        <tr ng-repeat="report in expenseSheetReports"
                             style="text-align: center;">
-                            <td class="col-sm-1">{{$index+1}}</td>
-                            <td class="col-sm-1">{{report.registrationNo | uppercase}}</td>
-                            <td class="col-sm-2">
-                                {{report.loadingPoint || '---'}}
-                            </td>
-                            <td class="col-sm-2">
-                                {{report.unloadingPoint || '---'}}
-                            </td>
-                            <td class="col-sm-2">
-                                {{report.partyName || '---'}}
-                            </td>
+                            <td>{{$index+1}}</td>
+                            <td>{{report.vehicleNo}}</td>
+                            <td>{{report.from || '---'}}</td>
+                            <td>{{report.to || '---'}}</td>
+                            <td>{{report.partyName || '---'}}</td>
+                            <td>{{report.driverName || '---'}}</td>
+                            <td>{{report.dieselSlip || '---'}}</td>
+                            <td>{{report.dieselAmount || '---'}}</td>
                         </tr>
                     </table>
                 </div>
