--- a/client/views/partials/Invoice/add_editInvoice.html
+++ b/client/views/partials/Invoice/add_editInvoice.html
@@ -84,7 +84,15 @@
                 </span>
             <span data-ng-hide="invoice.addTrip">
                 <div ng-repeat="exp in invoice.trip track by $index">
-                     <div class="form-group col-sm-6 col-xs-12" style="margin-left: 20px">
+                    <div ng-if="invoice.tripSheetId.length>0">
+                     <div class=" col-sm-2 form-group col-xs-12">
+                        <div class="styling-input-list">
+                            <input type="text"  class="form-control custom-form-control"  ng-model="exp.vehicleNo" readonly/>
+                            <label class="focus-effect-for-input" aria-hidden="true">Vehicle No</label>
+                        </div>
+                    </div>
+                </div>
+                     <div class="form-group col-sm-6 col-xs-12" style="margin-left: 20px" ng-hide="invoice.tripSheetId.length>0">
                                 <div class="styling-input-list">
                                     <ui-select ng-model="exp.vehicleNo" theme="select2"
                                                title="Choose a Truck" append-to-body="true">
