--- a/client/views/partials/Invoice/add_editInvoice.html
+++ b/client/views/partials/Invoice/add_editInvoice.html
@@ -402,7 +402,7 @@
     </div>
 </script>
 
-    <div class="invoice_Container" style="line-height: 1.6;">
+    <div class="invoice_Container" ng-show="false" style="line-height: 1.6;">
         <div>
             <table class="table1" style="width: 100%;border-collapse: collapse;margin-top: -8px;line-height: 1.6;">
                 <tr>
