--- a/client/views/partials/Invoice/invoiceList.html
+++ b/client/views/partials/Invoice/invoiceList.html
@@ -132,15 +132,15 @@
                     invoice.trip[invoice.trip.length-1].vehicleNo}}</td>
                 <td style="border: 1px solid #000000">{{invoice.trip[0].from}}</t>
                 <td style="border: 1px solid #000000">{{invoice.trip[0].to}}</td>
-                <td style="border: 1px solid #000000">10,000.00</td>
+                <td style="border: 1px solid #000000"></td>
             </tr class="print-style">
             <tr class="print-style">
                 <th colspan="6" style="text-align:right; border: 1px solid #000000">Total:</th>
-                <th style="text-align: center; border: 1px solid #000000;">{{printTotalAmount}}</th>
+                <th style="text-align: center; border: 1px solid #000000;">{{PrintTotalAmount}}</th>
             </tr class="print-style">
             <tr class="print-style">
                 <th colspan="7" style="text-align: left; border: 1px solid #000000">
-                    <b>Ruppees Only: {{printTotalAmount | words}}</b>
+                    <b>Ruppees Only: {{PrintTotalAmount | words}}</b>
                 </th>
             </tr class="print-style">
             <tr class="print-style">
