--- a/client/views/partials/Invoice/invoiceList.html
+++ b/client/views/partials/Invoice/invoiceList.html
@@ -132,7 +132,7 @@
                     invoice.trip[invoice.trip.length-1].vehicleNo}}</td>
                 <td style="border: 1px solid #000000">{{invoice.trip[0].from}}</t>
                 <td style="border: 1px solid #000000">{{invoice.trip[0].to}}</td>
-                <td style="border: 1px solid #000000">10,000.00</td>
+                <td style="border: 1px solid #000000">{{invoice.rate * invoice.quantity}}</td>
             </tr class="print-style">
             <tr class="print-style">
                 <th colspan="6" style="text-align:right; border: 1px solid #000000">Total:</th>
