--- a/client/views/partials/Invoice/add_editInvoice.html
+++ b/client/views/partials/Invoice/add_editInvoice.html
@@ -297,6 +297,16 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="form-group col-xs-12">
+                    <div class="styling-input-list">
+                        <div class="styling-input-list">
+                            <input type="text" class="form-control custom-form-control" ng-model="invoice.specialInstructions"/>
+                            <label class="focus-effect-for-input" aria-hidden="true">Special Instructions</label>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="form-group col-xs-12">
                         <div style="margin-top:25px">
                              <div class="styling-input-list">
