Expense Sheet Totals issues fixed

--- a/client/views/partials/anjanaParties/anjana-editParty.html
+++ b/client/views/partials/anjanaParties/anjana-editParty.html
@@ -49,7 +49,7 @@
                     <div class="styling-input-list">
                         <input ng-model="party.gstNo" type="text" class="form-control custom-form-control" id="gstNo"
                         >
-                        <label class="focus-effect-for-input" aria-hidden="true">GST No</label>
+                        <label class="focus-effect-for-input" aria-hidden="true">GST No*</label>
 
                     </div>
                 </div>
