--- a/client/views/partials/tripSheets/tripSheet.html
+++ b/client/views/partials/tripSheets/tripSheet.html
@@ -63,13 +63,14 @@
             <button type="button" class="btn btn-default" ng-click="createTripSheet(dt)"><span
                     class="glyphicon glyphicon-refresh"></span></button>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6" style="width: 42%;">
             <ul class="list-inline add-load">
                 <li><a href="#" ng-click="saveLoadingPoint()">Add Loading Point</a></li>
                 <li><a href="#" ng-click="saveUnloadingPoint()">Add Unloading Point</a></li>
             </ul>
         </div>
-        <div class="pull-right">
+        <div class="">
+            <button class="btn btn-primary" ng-click="addExtraTrip()">Add Trip</button>
             <button class="btn btn-primary" ng-click="saveAll()"> Save</button>
         </div>
     </div>
@@ -99,11 +100,6 @@
                             {{loadingPoint.loadingPoint}}
                         </option>
                     </select>
-                    <!--<select class="form-control" ng-model="sheet.loadingPoint"-->
-                    <!--ng-options="loading._id as loading.loadingPoint for loading in loadingPoints">-->
-                    <!--</select>-->
-
-
                 </div>
             </td>
             <td class="col-sm-2">
@@ -111,16 +107,12 @@
                         <span class="bot-arrow">
                             <i class="fa fa-angle-down" aria-hidden="true"></i>
                         </span>
-                    <select class="form-control" ng-model="sheet.unloadingPoint" ng-disabled="sheet.loadingPoint === 'In Transit' || sheet.loadingPoint === 'No Trips'">
+                    <select class="form-control" ng-model="sheet.unloadingPoint" ng-disabled="sheet.loadingPoint === 'In Transit' || sheet.loadingPoint === 'No Trips' || sheet.loadingPoint === 'Not unloaded'">
                         <option value="" selected>--Unloading--</option>
                         <option ng-repeat="unloadingPoint in unloadingPoints" value="{{unloadingPoint.unloadingPoint}}">
                             {{unloadingPoint.unloadingPoint}}
                         </option>
                     </select>
-                    <!-- <select class="form-control" ng-model="sheet.unloadingPoint"
-                             ng-options="unloading._id as unloading.unloadingPoint for unloading in unloadingPoints" >
-                     </select>-->
-
                 </div>
             </td>
             <td>
@@ -128,7 +120,7 @@
                         <span class="bot-arrow">
                             <i class="fa fa-angle-down" aria-hidden="true"></i>
                         </span>
-                <select class="form-control" ng-model="sheet.driverName" ng-disabled="sheet.loadingPoint === 'In Transit' || sheet.loadingPoint === 'No Trips'">
+                <select class="form-control" ng-model="sheet.driverName" ng-disabled="sheet.loadingPoint === 'In Transit' || sheet.loadingPoint === 'No Trips' || sheet.loadingPoint === 'Not unloaded'">
                     <option value="" selected>Select Driver</option>
                     <option ng-repeat="driver in presentDrivers">{{driver.driverName}}</option>
                 </select>
@@ -140,7 +132,7 @@
             <td class="col-sm-2">
                 <ui-select ng-model="sheet.partyId" theme="select2" title="Choose a Party"
                            append-to-body="true" style="width: 250px;"
-                           ng-disabled="sheet.loadingPoint === 'In Transit' || sheet.loadingPoint === 'No Trips'">
+                           ng-disabled="sheet.loadingPoint === 'In Transit' || sheet.loadingPoint === 'No Trips' || sheet.loadingPoint === 'Not unloaded'">
                     <ui-select-match placeholder=" Select a Party" class="form-control"
                                      style="height: 42px;text-align: left;">
                         {{$select.selected.name || sheet.partyName}}
@@ -384,8 +376,6 @@
             <div class="clearfix"></div>
             <div class="clearfix"></div>
         </div>
-
-
     </script>
 
 </div>
