--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -3427,3 +3427,11 @@ textarea.form-control {
     margin-bottom: 6px;
     list-style-type: none;
 }
+.dis-center{
+    display: block;
+    margin: 0 auto;
+    float: none;
+}
+.control-label{
+    padding: 5px;
+}
