--- a/client/views/partials/tripSheets/tripSheet.html
+++ b/client/views/partials/tripSheets/tripSheet.html
@@ -70,7 +70,7 @@
             </ul>
         </div>
         <div class="">
-            <button class="btn btn-primary" ng-click="addExtraTrip()">Add Trip</button>
+            <button class="btn btn-primary" data-toggle="modal" data-target="#addingNewTrip">Add Trip</button>
             <button class="btn btn-primary" ng-click="saveAll()"> Save</button>
         </div>
     </div>
@@ -107,7 +107,8 @@
                         <span class="bot-arrow">
                             <i class="fa fa-angle-down" aria-hidden="true"></i>
                         </span>
-                    <select class="form-control" ng-model="sheet.unloadingPoint" ng-disabled="sheet.loadingPoint === 'In Transit' || sheet.loadingPoint === 'No Trips' || sheet.loadingPoint === 'Not unloaded'">
+                    <select class="form-control" ng-model="sheet.unloadingPoint"
+                            ng-disabled="sheet.loadingPoint === 'In Transit' || sheet.loadingPoint === 'No Trips' || sheet.loadingPoint === 'Not unloaded'">
                         <option value="" selected>--Unloading--</option>
                         <option ng-repeat="unloadingPoint in unloadingPoints" value="{{unloadingPoint.unloadingPoint}}">
                             {{unloadingPoint.unloadingPoint}}
@@ -120,14 +121,16 @@
                         <span class="bot-arrow">
                             <i class="fa fa-angle-down" aria-hidden="true"></i>
                         </span>
-                <select class="form-control" ng-model="sheet.driverName" ng-disabled="sheet.loadingPoint === 'In Transit' || sheet.loadingPoint === 'No Trips' || sheet.loadingPoint === 'Not unloaded'">
-                    <option value="" selected>Select Driver</option>
-                    <option ng-repeat="driver in presentDrivers">{{driver.driverName}}</option>
-                </select>
+                    <select class="form-control" ng-model="sheet.driverName"
+                            ng-disabled="sheet.loadingPoint === 'In Transit' || sheet.loadingPoint === 'No Trips' || sheet.loadingPoint === 'Not unloaded'">
+                        <option value="" selected>Select Driver</option>
+                        <option ng-repeat="driver in presentDrivers">{{driver.driverName}}</option>
+                    </select>
                 </div>
             </td>
             <td>
-                <input type="text" class="form-control" ng-model="sheet.tripId" style="width: 40px;" ng-change="getValues(sheet.tripId,$index)">
+                <input type="text" class="form-control" ng-model="sheet.tripId" style="width: 40px;"
+                       ng-change="getValues(sheet.tripId,$index)">
             </td>
             <td class="col-sm-2">
                 <ui-select ng-model="sheet.partyId" theme="select2" title="Choose a Party"
@@ -377,5 +380,86 @@
             <div class="clearfix"></div>
         </div>
     </script>
+    <!-- Adding New Trip ------->
+    <div id="addingNewTrip" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Add New Trip</h4>
+                </div>
+                <div class="modal-body col-sm-9 dis-center">
+                    <div class="form-group col-xs-12">
+                        <label class="col-sm-5 control-label">Vehicle No:</label>
+                        <div class="col-sm-7">
+                            <input type="text" class="form-control" ng-model="newTrip.vehicleNo" placeholder="Enter Vehicle No">
+                        </div>
+                    </div>
+                    <div class="form-group col-xs-12">
+                        <label class="col-sm-5 control-label">Loading Point:</label>
+                        <div class="col-sm-7 pos-relative">
+                             <span class="bot-arrow">
+                            <i class="fa fa-angle-down" aria-hidden="true"></i>
+                            </span>
+                            <select class="form-control" ng-model="newTrip.loadingPoint">
+                                <option value="" selected>--Loading--</option>
+                                <option ng-repeat="loadingPoint in loadingPoints"
+                                        value="{{loadingPoint.loadingPoint}}">
+                                    {{loadingPoint.loadingPoint}}
+                                </option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group col-xs-12">
+                        <label class="col-sm-5 control-label">Unloading Point:</label>
+                        <div class="col-sm-7 pos-relative">
+                             <span class="bot-arrow">
+                            <i class="fa fa-angle-down" aria-hidden="true"></i>
+                        </span>
+                            <select class="form-control" ng-model="newTrip.unloadingPoint">
+                                <option value="" selected>--Unloading--</option>
+                                <option ng-repeat="loadingPoint in unloadingPoints"
+                                        value="{{loadingPoint.unloadingPoint}}">
+                                    {{loadingPoint.unloadingPoint}}
+                                </option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group col-xs-12">
+                        <label class="col-sm-5 control-label">Driver:</label>
+                        <div class="col-sm-7">
+                            <input type="text" class="form-control" ng-model="newTrip.driverName" placeholder="Enter Driver Name">
+                        </div>
+                    </div>
+                    <div class="form-group col-xs-12">
+                        <label class="col-sm-5 control-label">Party Name:</label>
+                        <div class="col-sm-7">
+                            <ui-select ng-model="newTrip.partyId" theme="select2" title="Choose a Party"
+                                       append-to-body="true">
+                                <ui-select-match placeholder=" Select a Party" class="form-control">
+                                    {{$select.selected.name || sheet.partyName}}
+                                </ui-select-match>
+                                <ui-select-choices repeat="party in parties | propsFilter: {name: $select.search}">
+                                    <div ng-bind-html="party.name | highlight: $select.search">
+                                    </div>
+                                </ui-select-choices>
+                            </ui-select>
+                        </div>
+                    </div>
+                    <div class="col-12 text-right">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary" ng-click="saveNewTrip()">Save
+                        </button>
+                    </div>
+                </div>
+                <div class="clearfix"></div>
+
+            </div>
+            <div class="clearfix"></div>
+
+        </div>
+
+    </div>
 
 </div>
