fixed new expense and new trip

--- a/client/views/partials/trucks/trucks-edit.html
+++ b/client/views/partials/trucks/trucks-edit.html
@@ -27,7 +27,7 @@
                             </small>
                         </ui-select-choices>
                     </ui-select>
-                    <label class="focus-effect-for-input">Select Truck Type*</label>
+                    <label class="focus-effect-for-input">Select Truck Type</label>
                 </div>
             </div>
 
