--- a/client/views/partials/expenses/expensesSheet.html
+++ b/client/views/partials/expenses/expensesSheet.html
@@ -240,7 +240,7 @@
                 </div>
                 <div class="modal-body col-sm-9 dis-center">
                     <div class="form-group col-xs-12">
-                        <label class="col-sm-5 control-label">Vehicle No:</label>
+                        <label class="col-sm-5 control-label">Vehicle No*:</label>
                         <div class="col-sm-7">
                             <input type="text" class="form-control" ng-model="newExpense.vehicleNo" placeholder="Enter Vehicle No">
                         </div>
@@ -258,7 +258,7 @@
                         </div>
                     </div>
                     <div class="form-group col-xs-12">
-                        <label class="col-sm-5 control-label">Party Name:</label>
+                        <label class="col-sm-5 control-label">Party Name*:</label>
                         <div class="col-sm-7">
                             <ui-select ng-model="newExpense.partyId" theme="select2" title="Choose a Party"
                                        append-to-body="true">
@@ -322,7 +322,7 @@
                     </div>
                     <div class="col-12 text-right">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary" ng-click="saveNewTrip()">Save
+                        <button type="button" class="btn btn-primary" ng-click="saveNewExpense()">Save
                         </button>
                     </div>
                 </div>
