--- a/client/views/partials/tripSheets/tripSheet.html
+++ b/client/views/partials/tripSheets/tripSheet.html
@@ -391,9 +391,9 @@
                 </div>
                 <div class="modal-body col-sm-9 dis-center">
                     <div class="form-group col-xs-12">
-                        <label class="col-sm-5 control-label">Vehicle No:</label>
+                        <label class="col-sm-5 control-label">Vehicle No*:</label>
                         <div class="col-sm-7">
-                            <input type="text" class="form-control" ng-model="newTrip.vehicleNo" placeholder="Enter Vehicle No">
+                            <input type="text" class="form-control" ng-model="newTrip.registrationNo" placeholder="Enter Vehicle No">
                         </div>
                     </div>
                     <div class="form-group col-xs-12">
@@ -429,11 +429,17 @@
                     <div class="form-group col-xs-12">
                         <label class="col-sm-5 control-label">Driver:</label>
                         <div class="col-sm-7">
-                            <input type="text" class="form-control" ng-model="newTrip.driverName" placeholder="Enter Driver Name">
+                              <span class="bot-arrow">
+                            <i class="fa fa-angle-down" aria-hidden="true"></i>
+                        </span>
+                            <select class="form-control" ng-model="newTrip.driverName">
+                                <option value="" selected>Select Driver</option>
+                                <option ng-repeat="driver in presentDrivers">{{driver.driverName}}</option>
+                            </select>
                         </div>
                     </div>
                     <div class="form-group col-xs-12">
-                        <label class="col-sm-5 control-label">Party Name:</label>
+                        <label class="col-sm-5 control-label">Party Name*:</label>
                         <div class="col-sm-7">
                             <ui-select ng-model="newTrip.partyId" theme="select2" title="Choose a Party"
                                        append-to-body="true">
