--- a/client/views/partials/Invoice/invoiceList.html
+++ b/client/views/partials/Invoice/invoiceList.html
@@ -44,7 +44,7 @@
             <td data-title="'S.No'" sortable="''" class="clickable-item">{{$index + 1}}
             </td>
             <td data-title="'Party Name'" sortable="'partyId'" class="clickable-item">{{
-                invoice.partyId}}
+                invoice.partyName}}
             </td>
             <td data-title="'Date'" sortable="'createdAt'" class="clickable-item">{{
                 invoice.createdAt | date: "dd/MM/y"}}
